# Human-Keypoints-Detection

./: .gitignore  README.md  demo.py  requirements.txt  run.bat  run.py  说明文档.md
configs/: config.py  val_config.py
configs/coco/hrnet/: pretrained.sh  w32_adam_finger4.yaml  w32_adam_person12.yaml  w48_adam_finger4.yaml  w48_adam_penson12.yaml
configs/coco/mobilenet/: val.yaml  (+19 more)
docker/: Dockerfile
libs/: __init__.py
libs/detector/: README.md  run.sh
libs/detector/libs/StatusMonitor/cpp/: ActionStatus.cpp  ActionStatus.h  CMakeLists.txt  build.sh  demo.cpp
libs/docs/: README.md
libs/posture/: posture.py  sitting.py
models/: __init__.py  inference.py
models/core/: MultiStepValue.py  __init__.py  config.py  evaluate.py  function.py  function_kd.py  function_offset.py  inference.py  loss.py  udp_offset.py
models/nets/: __init__.py  build_nets.py  ir_mobilenet_v2.py  mobilenet_v2.py  model_ir_mobilenet_v2.py  model_mobilenet_v2.py  model_mobilenet_v2_bk.py  model_mobilenet_v3_large.py  model_mobilenet_v3_small.py  pose_hrnet.py  pose_resnet.py  pose_resnetst.py  tf_build_nets.py  tf_model_mobilenet_v2.py  tf_pose_resnet.py
models/smooth/: README.md  __init__.py  custom_queue.py  demo.py  kalman_filter.py  mean_filter.py
models/tools/: transforms.py  utils.py  vis.py
scripts/: build.bat
utils/: __init__.py  create_dataset.py  custom_cocoeval.py  custom_cocoeval2.py  debug.py  geometry_tools.py  image_utils.py  rsync_data.py  tf_tools.py  torch_tools.py  visualization.py  voc_keypoint_parser.py  voc_parser.py
utils/nms/: cpu_nms.c  gpu_nms.cpp
(+187 files in other folders)
